--- a/CV/styles/style.css
+++ b/CV/styles/style.css
@@ -4,12 +4,18 @@
   line-height: 1.2;
   font-family: 'Open Sans', sans-serif;
   padding: 20px;
+  font-size: 1rem;
 }
 
 /* General */
 .section__subtitle {
   margin: 5px 0;
   font-family: 'Acme', sans-serif;
+  font-size: 1.2rem;
+}
+
+.icon {
+  padding-right: 10px;
 }
 
 /* header */
@@ -19,8 +25,8 @@
 }
 
 .profile__img {
-  max-width: 90px;
-  max-height: 90px;
+  max-width: 100px;
+  max-height: 100px;
   border-radius: 100px;
 }
 
@@ -40,7 +46,11 @@
 .profile__subtitle {
   margin: 0;
   font-family: 'Kalam', cursive;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+}
+
+.profile__text {
+  margin: 0;
 }
 
 /* main */
@@ -52,14 +62,30 @@
 /* contact-info section */
 .contact-info {
   margin: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+}
+
+.contact-info__subtitle{
+  margin: 0;
+  font-family: 'Kalam', cursive;
+  font-size: 1.2rem;
 }
 
 .contact-info__personal-details-list {
   list-style: none;
-  display: flex;
-  justify-content: space-around;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 40px;
+}
+
+.contact-info__link {
+  text-decoration: none;
+  color: black;
+}
+
+.contact-info__link:hover {
+  color: #FF6B6B;
 }
 
 /* education-info section */
@@ -92,6 +118,7 @@
 
 .education-info__studies-subject {
   margin: 0;
+  font-size: 1rem;
 }
 
 .education-info__studies-framework {
@@ -128,6 +155,7 @@
 
 .volunteering__framework {
   margin: 0;
+  font-size: 1rem;
 }
 
 .volunteering__responsibilities {
@@ -152,16 +180,13 @@
 
 .skills__skill-subject {
   margin: 0 30px 0 0;
+  font-size: 1rem;
 }
 
 .skill__skill_level {
   margin: 0;
 }
 
-/*
-.skills__tools-list{
-  margin: 0 0 0 100px;
-} */
 /* work-info section */
 .work-info__work-list {
   list-style: none;
@@ -196,6 +221,7 @@
 
 .work-info__job-title {
   margin: 0;
+  font-size: 1rem;
 }
 
 .work-info__responsibilities {
@@ -223,6 +249,7 @@
 .languages__language {
   margin: 0;
   flex-basis: 80px;
+  font-size: 1rem;
 }
 
 .languages__level {
@@ -230,11 +257,26 @@
 }
 
 /* interests section */
-.interests__subject {
-  margin: 0 0 0 40px;
+.interests__description {
+  margin: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
-/* value section */
+.interests__subject {
+  margin: 0;
+}
+
+.interests__link {
+  text-decoration: none;
+  color: black;
+}
+
+.interests__link:hover {
+  color: #FF6B6B;
+}
+
+/* value section  */
 .value__description {
   margin: 0 0 0 40px;
 }
